// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input/> renders error input 1`] = `
<div
  className="Van-TextInput Van-TextInput--error"
>
  <input
    className="Van-TextInput-input"
    id=""
    type="text"
  />
  <span
    className="Van-Icon Van-TextInput-icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test-file-stub",
      }
    }
  />
</div>
`;

exports[`<Input/> renders error input with error message 1`] = `
<div
  className="Van-TextInput Van-TextInput--error"
>
  <input
    className="Van-TextInput-input"
    id=""
    type="text"
  />
  <span
    className="Van-Icon Van-TextInput-icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test-file-stub",
      }
    }
  />
  <div
    className="Van-TextInput-error-message"
  >
    My error message
  </div>
</div>
`;

exports[`<Input/> renders success input 1`] = `
<div
  className="Van-TextInput Van-TextInput--success"
>
  <input
    className="Van-TextInput-input"
    id=""
    type="text"
  />
  <span
    className="Van-Icon Van-TextInput-icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "test-file-stub",
      }
    }
  />
</div>
`;

exports[`<Input/> renders with specific attributes 1`] = `
<div
  className="Van-TextInput"
>
  <input
    className="Van-TextInput-input"
    data-id="0"
    id=""
    type="text"
  />
</div>
`;

exports[`<Input/> renders with specific className 1`] = `
<div
  className="Van-TextInput my-class"
>
  <input
    className="Van-TextInput-input"
    id=""
    type="text"
  />
</div>
`;
